--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./index.css" />
+   
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+
+    <ul class="main__list">
+      <a class="main__link" href="./user_api.html">user_api.html</a>
+      <a class="main__link" href="#">search-form DZ.html</a>
+      <a class="main__link" href="#">cat-search DZ.html</a>
+      <a class="main__link" href="#">search-class DZ.html</a>
+    </ul>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
