--- a/src/user_api.html
+++ b/src/user_api.html
@@ -7,9 +7,29 @@
     <title>user_api</title>
 </head>
 <body>
-    <h2>user</h2>
+
+    <div class="header">
+        <form class="search-form " id="search-form">
+            <!-- <input
+              type="text"
+              name="searchQuery"
+              autocomplete="off"
+              placeholder="Search images..."
+            /> -->
+            <button type="submit">Search</button>
+          </form>
+    </div>
 
 
-    <script src="./js/user_api.js"></script>
+      <div class="gallery">
+     
+      </div>
+      
+      <button type="button" class="load-more is-hidden">Load more</button>
+
+
+
+    <script src="./js/user_api/user_api.js" type="module"></script>
+   
 </body>
 </html>
