--- a/src/img_search.html
+++ b/src/img_search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>user_api</title>
+    <title>img_search</title>
 </head>
 <body>
 
@@ -13,6 +13,6 @@
 
   
      
-    <script src="./js/user_api/user_api.js" type="module"></script>
+    <script src="./js/img_search/img_search.js" type="module"></script>
 </body>
 </html>
