--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <ul class="main__list">
       <a class="main__link" href="./user_api.html">user_api.html</a>
-      <a class="main__link" href="#">search-form DZ.html</a>
+      <a class="main__link" href="img_search.html">img_search.html</a>
       <a class="main__link" href="#">cat-search DZ.html</a>
       <a class="main__link" href="#">search-class DZ.html</a>
     </ul>
