--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
       <a class="main__link" href="#">search-class DZ.html</a>
     </ul>
 
+    
+
    
 
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/toIndex.js"></script>
   </body>
 </html>
