--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./index.css" />
+ 
    
   </head>
   <body>
@@ -12,7 +12,7 @@
     <ul class="main__list">
       <a class="main__link" href="./user_api.html">user_api.html</a>
       <a class="main__link" href="img_search.html">img_search.html</a>
-      <a class="main__link" href="#">cat-search DZ.html</a>
+      <a class="main__link" href="./film-search.html">film-search.html</a>
       <a class="main__link" href="#">search-class DZ.html</a>
     </ul>
 
