--- a/src/film-search.html
+++ b/src/film-search.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <div class="header__container container">
-          <div class="header__bg">
+          <div class="header__background">
               <div class="header__wrapper">
                   <div class="header__btn-wrapper">
                     <button class="header__btn-home button" type="button">HOME</button>
