--- a/src/film-search.html
+++ b/src/film-search.html
@@ -14,11 +14,11 @@
           <div class="header__background">  
                 
                 <div class="header__wrapper-top">
-                  <a href="#">
+                  <a class="header__home-link" href="#">
                       <button class="header__btn-home btn" type="button">
                       HOME</button>
                   </a>
-                  <a href="#">
+                  <a class="header__library-link" href="#">
                       <button class="header__btn-library btn" type="button">
                       MY LIBRARY</button>
                   </a>
