--- a/src/film-search.html
+++ b/src/film-search.html
@@ -14,7 +14,7 @@
           <div class="header__background">  
                 
         
-                  <div class="header__wrapper">
+                  <div class="header__btn-wrapper">
                     <a href="./index.html" class="header__btn-home button current">
                       HOME
                       </a>
