--- a/src/film-search.html
+++ b/src/film-search.html
@@ -37,15 +37,9 @@
                       </button>
                   </form>
                 </div>
+                <div class="header__root-desktop"></div>
 
-                <div class="header__root-mobile"></div>
-                <!-- <div class="header__wrapper-bottom">
-                  <button class="header__btn-watched btn" type="button">
-                      WATCHED
-                    </button>
-                    <button class="header__btn-queue btn" type="button">QUEUE</button>
-                </div> -->
-
+                <div class="header__root-mobile">
 
                 <a class="header__logo-link log" href="#">
                   <svg class="header__film-svg" width="32" height="32">
@@ -53,6 +47,7 @@
                   </svg>
                   <h1 class="header__title">Filmoteka</h1>
                 </a>
+              </div>
              
           </div>
         </div>
