--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,23 @@
    
   </head>
   <body>
-
+<!-- 
     <ul class="main__list">
       <a class="main__link" href="./user_api.html">user_api.html</a>
       <a class="main__link" href="img_search.html">img_search.html</a>
       <a class="main__link" href="./film-search.html">film-search.html</a>
       <a class="main__link" href="#">search-class DZ.html</a>
-    </ul>
+    </ul> -->
 
+
+
+    <include src="./film-search.html"></include>
     
 
    
 
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/renderButtons.js"></script>
     <script type="module" src="./js/toIndex.js"></script>
   </body>
 </html>
