--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
     <script type="module" src="./index.js"></script>
     <script type="module" src="./js/renderButtons.js"></script>
+    <script type="module" src="./js/button_anime.js"></script>
     <script type="module" src="./js/toIndex.js"></script>
   </body>
 </html>
