--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
    
   </head>
   <body>
-<!-- 
+
     <ul class="main__list">
+      <a class="main__link" href="./filmoteka/">user_api.html</a>
       <a class="main__link" href="./user_api.html">user_api.html</a>
       <a class="main__link" href="img_search.html">img_search.html</a>
       <a class="main__link" href="./film-search.html">film-search.html</a>
       <a class="main__link" href="#">search-class DZ.html</a>
-    </ul> -->
+    </ul>
 
 
 
-    <include src="./film-search.html"></include>
+    <!-- <include src="./film-search.html"></include> -->
     
 
    
