--- a/src/film-search.html
+++ b/src/film-search.html
@@ -57,7 +57,7 @@
       
    
 
-    <!-- <script src="./js/img_search/img_search.js" type="module"></script> -->
+    <script src="./js/img_search/img_search.js" type="module"></script>
     <script src="./js/toIndex.js" type="module"></script>
 </body>
 </html>
