--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./sass/index.scss">
     <title>Page title</title>
  
    
@@ -10,10 +11,10 @@
   <body>
 
     <ul class="main__list">
-      <a class="main__link" href="./filmoteka/">user_api.html</a>
+      <a class="main__link" href="./filmoteka/">./filmoteka/index.html</a>
       <a class="main__link" href="./user_api.html">user_api.html</a>
       <a class="main__link" href="img_search.html">img_search.html</a>
-      <a class="main__link" href="./film-search.html">film-search.html</a>
+      <!-- <a class="main__link" href="./film-search.html">film-search.html</a> -->
       <a class="main__link" href="#">search-class DZ.html</a>
     </ul>
 
@@ -25,8 +26,6 @@
    
 
     <script type="module" src="./index.js"></script>
-    <script type="module" src="./js/renderButtons.js"></script>
-    <script type="module" src="./js/button_anime.js"></script>
-    <script type="module" src="./js/toIndex.js"></script>
+
   </body>
 </html>
