--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <ul class="main__list">
-      <a class="main__link" href="./filmoteka/">./filmoteka/index.html</a>
+      <a class="main__link" href="./filmoteka/index.html">./filmoteka/index.html</a>
       <a class="main__link" href="./user_api.html">user_api.html</a>
       <a class="main__link" href="img_search.html">img_search.html</a>
       <!-- <a class="main__link" href="./film-search.html">film-search.html</a> -->
