--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <ul class="main__list">
       <a class="main__link" href="./filmoteka/index.html">./filmoteka/index.html</a>
       <a class="main__link" href="./user_api.html">user_api.html</a>
-      <a class="main__link" href="img_search.html">img_search.html</a>
+      <a class="main__link" href="./img-search/index.html">img_search.html</a>
       <!-- <a class="main__link" href="./film-search.html">film-search.html</a> -->
       <a class="main__link" href="#">search-class DZ.html</a>
     </ul>
