--- a/src/img-search/index.html
+++ b/src/img-search/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>img_search</title>
+    <link rel="stylesheet" href="./sass/index.scss">
 </head>
 <body>
 
     <div id="root"></div>
    
 
-    <script src="./js/img_search/img_search.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
